--- a/build.gradle
+++ b/build.gradle
@@ -7,13 +7,25 @@ version '1.0-SNAPSHOT'
 
 sourceCompatibility = 1.8
 
+//create a single Jar with all dependencies
+task fatJar(type: Jar) {
+    manifest {
+        attributes 'Implementation-Title': 'P2pServer',
+                'Implementation-Version': version,
+                'Main-Class': 'p2pServer.ServerP2P'
+    }
+    baseName = project.name + '-all'
+    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
+    with jar
+}
+
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-    implementation 'com.googlecode.json-simple:json-simple:1.1.1'
-    implementation 'com.google.code.gson:gson:1.1'
+    compile group: 'junit', name: 'junit', version: '4.12'
+    compile 'com.googlecode.json-simple:json-simple:1.1.1'
+    compile 'com.google.code.gson:gson:1.1'
 }
 
