--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ task fatJar(type: Jar) {
     manifest {
         attributes 'Implementation-Title': 'P2pServer',
                 'Implementation-Version': version,
-                'Main-Class': 'p2pServer.ServerP2P'
+                'Main-Class': 'ServerP2P'
     }
     baseName = project.name + '-all'
     from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
